# oci-storage-initializer

./: .gitignore  Dockerfile  GET_STARTED.md  Makefile  README.md  oci-initializer-entrypoint  pyproject.toml
.github/workflows/: csi_test.yaml
oci/: storage.py
