[tool.poetry]
name = "oci-storage-initializer"
version = "0.0.1"
description = "OCI protocol Kserve custom storage initializer"
authors = ["Andrea Lamparelli <a.lamparelli95@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "oci"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kserve = "^0.13.0"
oras = "^0.1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
